Added the security manager to the VM run arguments